@@ -14,6 +14,7 @@ Jump Start Changelog
 * Fixed: Responsiveness of images with captions.
 * Fixed: Awkward spacing of captions on slider captions; now vertically centered.
 * Fixed: Portfolios and portfolio tags not showing in portfolio item sub meta.
+* Fixed: Columns in custom layouts with backgrounds had margin below, when stacking for mobile.
 * Fixed: Incorrect file permissions of files at `/framework/assets/svg/` for those uploading the theme manually outside of WordPress.
 * Fixed: Theme's default WPML language selector listing languages without translations.
 * Fixed: System for generating FontAwesome icon selections in admin.
